--- a/wwd130/wwr/index.html
+++ b/wwd130/wwr/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melodic Kayakers</title>
+    <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
+    <div id="content">
 <header>
     <a id="logo_link" href="index.html">
         <img class="logo" src="images/MelodicKayakerslogo.png" alt="Melodic Kayakers Logo">
@@ -42,10 +45,17 @@
         <img class="icon" src="images/fire_icon.png" alt="fire icon">
         <h2>Camping</h2>
     </section>
-     <section class="lessons-card">
+    <section class="lessons-card">
         <img class="lessons-img" src="images/lessons.jpg" alt="lessons boat">
         <img class="icon" src="images/lessons_icon.png" alt="lessons icon">
         <h2>Lessons</h2>
+    </section>
+    <div id="background"></div> 
+    <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+    <section class="msg">
+    <h2>More Than Just The Thrill</h2>
+    <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+    <a class='join' href="rivers.html">Join Us</a>
     </section>
     </main>
     <footer>
@@ -53,16 +63,17 @@
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com">
+        <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
-        <a href="https://twitter.com">
+        <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" alt="twitter icon">
         </a>
-        <a href="https://instagram.com">
+        <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
     </div>
     </footer>
+    </div>
     </body>
 </html>
