--- a/Weekly Examples/w04_challenge_1/activity challenge.html
+++ b/Weekly Examples/w04_challenge_1/activity challenge.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 4 Challenge</title>
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 <body>
     <div id="background">
@@ -18,7 +20,7 @@
                         3. Baptism by immersion for the remission of sins
                         4. Laying on the hands for the gift of the Holy Ghost 
         </p>
-        <img src="PresidentNelson.png" alt="Prophet">
+        <img src="images/PresidentNelson.jpeg" alt="Prophet">
         <p id="three"><p>"Because of the Savior's Atonement, His gospel provides an invitation to keep
         changing, growing,and becoming more pure."
         </p>
