--- a/wwd130/wwr/index.html
+++ b/wwd130/wwr/index.html
@@ -35,13 +35,13 @@
      </section>
     </div>
     <main class="home-grid">
-    <section class="tour-card">
-        <img class="tour-img" src="images/tour.jpg" alt="guided tours">
+    <section class="tours-card">
+        <img class="tours-img" src="images/tour.jpg" alt="guided tours">
         <img class="icon" src="images/tour_icon.png" alt="tour icon">
         <h2>Tours</h2>
     </section>
         <section class="camping-card">
-        <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+        <img class="camping-img" src="images/camping.jpg" alt="tent in mountains">
         <img class="icon" src="images/fire_icon.png" alt="fire icon">
         <h2>Camping</h2>
     </section>
@@ -53,7 +53,7 @@
     <div id="background"></div> 
     <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
-    <h2>More Than Just The Thrill</h2>
+    <h2 style="background-color: #6c7c4f">More Than Just The Thrill</h2>
     <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
     <a class='join' href="rivers.html">Join Us</a>
     </section>
