--- a/wwd130/wwr/site-plan-rafting.html
+++ b/wwd130/wwr/site-plan-rafting.html
@@ -39,7 +39,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src= "images\logo.png" alt="Melodic Kayakers Logo" />
+    <img src= "images\MelodicKayakerslogo.png" alt="Melodic Kayakers Logo" />
     <hr />
     <h2>Style Guide</h2>
 
