--- a/wwd130/wwr/index.html
+++ b/wwd130/wwr/index.html
@@ -28,7 +28,7 @@
       
     <section id="hero-msg">
         <h1 class="home-title">There's So Much Out There to Explore and Experience!</h1>
-        <h4>Make Memories with Melodic Kayakers</h4>
+        <h4>Make Memories with Melodic Kayakers!</h4>
         <div class='button-box'>
             <a class='book' href="contactus.html">Book Now</a>
         </div>
@@ -53,7 +53,7 @@
     <div id="background"></div> 
     <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
-    <h2 style="background-color: #6c7c4f">More Than Just The Thrill</h2>
+    <h2 style="background-color: white">More Than Just The Thrill</h2>
     <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
     <a class='join' href="rivers.html">Join Us</a>
     </section>
