--- a/wwd130/wwr/site-plan-rafting.html
+++ b/wwd130/wwr/site-plan-rafting.html
@@ -106,7 +106,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Page 2</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
@@ -114,7 +114,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Packages
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -131,9 +131,10 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Packages</h3>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src= "images\page2.png" alt="Page 2" />
   </main>
 </body>
 
