--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -262,7 +262,7 @@
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen></iframe>
         <img src="#" alt="image for page3">
-        <img src="images/purple cow drink.jpg" alt="Purple Cow Shake"
+        <img src="images/purple cow drink.jpg" alt="Purple Cow Shake">
       
       <h2>
         Wireframes
