Added Helpful Info wording

--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -261,7 +261,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/-scoDVBElyo" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen></iframe>
-        <img src="#" alt="image for page3">
+        <img src="#" alt="image for Helpful Info">
         <img src="images/purple cow drink.jpg" alt="Purple Cow Shake">
       
       <h2>
