Remove item from recipe

--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -245,7 +245,7 @@
 
       <h2>Purple Cow Dairy-free Shake Recipe</h2>
       <p>Ingredients</p>
-      <p>1¾ cups dairy-free milk beverage (see Milk Beverage Note in post above)</p>
+      <p>1¾ cups dairy-free milk beverage</p>
       <p>¾ Cup (1/2 of a 12-ounce can) frozen 100% concord grape juice concentrate, thawed</p>
       <p>Pinch salt</p>
       
