--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -251,7 +251,7 @@
       
       <p>Instructions</p>
       <p>Whisk or blend the ingredients together until combined.</p>
-      <p>If your mixture isn't cold, refrigerate it for 30 minutes.</p>
+      <p>Drink immediately and enjoy!</p>
 
       <p>Serving: 1</p>
         
