--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -243,7 +243,7 @@
       <p>https://www.godairyfree.org/</p>
       <p>https://www.oregonclinic.com/6-Food-Elimination-Eosinophilic-Esophagitis-EOE</p>
 
-      <h2>Purple Cow Dairy-free Shake Recipe</h2>
+      <h2>Dairy-free Purple Cow Shake Recipe</h2>
       <p>Ingredients</p>
       <p>1 can (6 ounces) frozen grape juice concentrate</p>
       <p>1 cup dairy-free beverage</p>
