--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -138,7 +138,7 @@
       <p>There is a saying among the EoE community: Hard to say. Even harder to live with.</p>
 
       <p>EoE is a rare disorder of the esophagus. In medical terms, the disease is classified as an “immune-mediated” disease. It’s complicated to explain. 
-         In an effort to simplify an explaination about the disease, watch the video for further explanation.</p>
+         In an effort to simplify an explaination about the disease, watch the videos for further explanation.</p>
       
       <iframe width="560" height="315" src="https://www.youtube.com/embed/K-YQlU_eQPk" 
       title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
