--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -244,12 +244,12 @@
       <p>https://www.oregonclinic.com/6-Food-Elimination-Eosinophilic-Esophagitis-EOE</p>
 
       <h2>Dairy-free Purple Cow Shake Recipe</h2>
-      <p>Ingredients</p>
+      <h4>Ingredients</h4>
       <p>1 can (6 ounces) frozen grape juice concentrate</p>
       <p>1 cup dairy-free beverage</p>
       <p>2 cups vanilla dairy-free ice cream</p>
       
-      <p>Instructions</p>
+      <h4>Instructions</h4> 
       <p>Put the grape juice concentrate and milk in the blender.</p>
       <p>Add the ice cream to the grape juice mixture.</p>
       <p>Cover blender with lid, and blend on high speed 30 seconds. Pour the shake into the drinking glasses, and serve right away.</p>
