--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -108,7 +108,7 @@
           FAQ's <!-- change this -->
         </div>
         <div class="sm-page3">
-          More Info  <!-- change this -->
+          Helpful Info  <!-- change this -->
         </div>
 
         <div class="top">
