Added National eos awareness week

--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -147,14 +147,16 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/jKxNBsEPRms" 
       title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
       allowfullscreen></iframe>
-
-      <h2>Interesting Facts</h2>
+     
       <p>To date, there isn’t a known cause of why individuals get EoE. Medical scientists have discovered that many who have EoE also have food and environmental
         allergies. Recently, scientists have made great strides in identifying several genes that may play a role in EoE, which gives hope in future treatments for 
         EOE. Currently, there is not a cure for EoE. </p> 
 
+      <h2>Interesting Facts</h2>  
+
       <p>Eosinophils are microscopic cells that are spherical. The cells are clear in your body but under a microscope, an acidic dye changes the cell’s color to be examined.
          The dye changes the cell to a purple or pink color (https://my.clevelandclinic.org/health/body/23402-eosinophils).</p>
+      <p>On May 15, 2007, The U.S. House of Representatives passed House Bill 296, recognizing the third week of May as National Eosinophil Awareness Week. </p>
 
       <p>Images for Home page</p>
       <img src="images/did-you-know.png" alt="Did You Know">
