--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -207,7 +207,7 @@
         with their spit, and then swallow. Additionally, a patient may have to mix liquid budesonide (commonly called a “slurry”) with Splenda, apple sauce, or chocolate syrup in order to make 
         it palatable to swallow and adhere to the esophagus as it is swallowed.</p>
         
-      <p>Until recently, there was no FDA-approved medication for the treatment of EOE. However, a new medication called Dupixent© sent shock waves through the EoE community when in May 2022 was approved 
+      <p>Until recently, there was no FDA-approved medication for the treatment of EOE. However, a new medication called Dupixent© sent shock waves through the EoE community when in May 2022 it was approved 
          for the treatment of EoE. Dupixent is known to target an underlying source of inflammation, which is known to be a cause of EoE (https://www.dupixent.com/eoe/).</p>
 
       </p>
