--- a/wwd130/eoe/index.html
+++ b/wwd130/eoe/index.html
@@ -29,7 +29,7 @@
       
         <section id="eoe_what_is_msg">
             <div>
-            <h1 class="home-title">What is EoE!</h1>
+            <h1 class="home-title">What is EoE?</h1>
                 <p>Esophagitis is pronounced: e-o-sin-o-FILL-ik uh-sof-uh-JIE-tis or EoE for short.
                 <p>EoE can affect infants, children, teens, and adults. Symptoms can vary by age, individual, and severity.</p>  
                 
