--- a/wwd130/eoe/index.html
+++ b/wwd130/eoe/index.html
@@ -19,6 +19,7 @@
                     <a href="index.html">Home</a>
                     <a href="facts_page.html">Facts Page</a>
                     <a href="helpful_info.html">Helpful Information</a>
+                    <a href="helpful_info.html">Helpful Information</a>
                     <a href="contactus.html">Contact Us</a>
             </nav>
     </header>
