Added Image to Hover

--- a/wwd130/eoe/facts_page.html
+++ b/wwd130/eoe/facts_page.html
@@ -12,18 +12,25 @@
 <div id="content">
     <header>
             <a id="h_purple_cow_link" href="index.html">
-                <img class="h_logo" src="images/purple_cow.png" alt="Purple Cow Logo">
+                <img class="h_logo" src="images/purple_cow1.png" alt="Purple Cow Logo">
             </a>
             <nav>
                     <a href="index.html">Home</a>
                     <a href="facts_page.html">Facts Page</a>
                     <a href="helpful_info.html">Helpful Information</a>
-                    <a href="contactus.html">Contact Us</a>
             </nav>
     </header>
-    <div id="f_eoe">
+    <div class="container">
+        <img src="images/throat_pain.jpg" alt="Symptoms" class="image">
+        <div class="overlay">
+          <div class="text">When I swallow, it feels like I am swallowing shards of glass!!</div>
+        </div>
+      </div>
+    <!--<div id="f_eoe">
         <img id="f_boy_img" src="images/throat_pain.jpg" alt="Symptoms">
     </div>
+    -->
+
     <section id="facts">
         <h2 class="home-title_f">Symptoms</h2>
         
