--- a/wwd130/eoe/helpful_info.html
+++ b/wwd130/eoe/helpful_info.html
@@ -12,13 +12,12 @@
 <div id="content">
     <header>
             <a id="h_purple_cow_link" href="index.html">
-                <img class="h_logo" src="images/purple_cow.png" alt="Purple Cow Logo">
+                <img class="h_logo" src="images/purple_cow1.png" alt="Purple Cow Logo">
             </a>
             <nav>
                     <a href="index.html">Home</a>
                     <a href="facts_page.html">Facts Page</a>
                     <a href="helpful_info.html">Helpful Information</a>
-                    <a href="contactus.html">Contact Us</a>
             </nav>
     </header>
     <div id="helpfulinfo">
