--- a/wwd130/eoe/contactus.html
+++ b/wwd130/eoe/contactus.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <a id="h_purple_cow_link" href="index.html">
-                <img class="h_logo" src="images/purple cow.png" alt="Purple Cow Logo">
+                <img class="h_logo" src="images/purple_cow1.png" alt="Purple Cow Logo">
             </a>
             <nav>
                     <a href="index.html">Home</a>
