changed hero image properties

--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -159,7 +159,7 @@
 
       <p>Images for Home page</p>
       <img src="images/did-you-know.png" alt="Did You Know">
-      <img src="images/shutterstock_1652247196.jpg" alt="EoS seen thru microscope">
+      <img src="images/home_page_hero.jpg" alt="EoS seen thru microscope">
 
       <!----------FAQ Page--------->
       <h3>Facts Page</h3>
