--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -159,7 +159,7 @@
 
       <p>Images for Home page</p>
       <img src="images/did-you-know.png" alt="Did You Know">
-      <img src= 
+      <img src= "images/home_page_hero.jpg">
       <!----------FAQ Page--------->
       <h3>Facts Page</h3>
       <h2><b>Symptoms</b></h2>
