--- a/wwd130/eoe/site-plan.html
+++ b/wwd130/eoe/site-plan.html
@@ -55,7 +55,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#2A1E5C]</td><td class="secondary">[#EE4266]</td><td class="accent1">[#3CBBB1]</td><td class="accent2">[#C4CBCA]</td></tr>
+        <tr><td class="primary">[#2A1E5C]</td><td class="secondary">[#EE4266]</td><td class="accent1">[#C4CBCA]</td><td class="accent2">[#3CBBB1]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
