--- a/wwd130/eoe/helpful_info.html
+++ b/wwd130/eoe/helpful_info.html
@@ -72,7 +72,7 @@
     </section>
     
 
-    <div justify="left" class="purple_cow">
+    <div class="purple_cow">
         <div id="cow">
         <h2 class="center">Dairy-free Purple Cow Shake Recipe</h2>
         <img src="images/purple_cow_drink.jpg" alt="Purple Cow Shake" style="display: block; margin-right: auto; margin-left:auto">
