--- a/wwd130/eoe/helpful_info.html
+++ b/wwd130/eoe/helpful_info.html
@@ -24,7 +24,7 @@
     </header>
     <footer class="hero-footer">
         <a class="button button-primary" href="index.html">Home</a>
-        <a class="button button_b" href="facts_page.html">Facts Page</a>
+        <a class="button button_b" href="facts_page.html">Facts</a>
         <a class="button button_c" href="helpful_info.html">Helpful Info</a>
     </footer>
     </section>
