--- a/wwd130/eoe/index.html
+++ b/wwd130/eoe/index.html
@@ -23,7 +23,7 @@
         </header>
         <footer class="hero-footer">
           <a class="button button-primary" href="index.html">Home</a>
-          <a class="button button_b" href="facts_page.html">Facts Page</a>
+          <a class="button button_b" href="facts_page.html">Facts</a>
           <a class="button button_c" href="helpful_info.html">Helpful Info</a>
         </footer>
       </section>
@@ -41,8 +41,7 @@
         width="853" 
         height="480" 
         src="https://www.youtube.com/embed/K-YQlU_eQPk" 
-        title="What is EoE (for teens and young adults)?" 
-        frameborder="0" 
+        title="What is EoE (for teens and young adults)?"  
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen></iframe>
 
@@ -53,7 +52,7 @@
         width="853" 
         height="480" 
         src="https://www.youtube.com/embed/jKxNBsEPRms" 
-        title="AZ APFED" frameborder="0" 
+        title="AZ APFED"  
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen></iframe>
     
@@ -75,7 +74,7 @@
         <p>On May 15, 2007, The U.S. House of Representatives passed House Bill 296, recognizing the third week of May as National Eosinophil Awareness Week. </p>  
         </article>
 
-    </div>
+    
     <div class="footer">
         <p>Purple Cow &copy; 2023 - Tiana Boyd</p>
                 <p><a href="site-plan.html">Site Plan</a></p>
