edited ul and li

--- a/wwd130/eoe/facts_page.html
+++ b/wwd130/eoe/facts_page.html
@@ -44,14 +44,16 @@
         <p>Symptoms among individuals vary based on several factors, such as age, developmental ability, and communication factors.</p>
         
         <p>The most common symptoms among individuals are:</p>
-            <p>•	Acid reflux (infant, child, adult)</p>
-            <p>•	Difficulty swallowing (child, adult)</p>
-            <p>•	Food impaction in the esophagus (older children/teens, adults)</p>
-            <p>•	Nausea/Vomiting (all ages)</p>
-            <p>•	Failure to thrive- due to poor appetite/pain swallowing (infant, child, rarely adult)</p>
-            <p>•	Abdominal pain/chest pain (child, adult)</p>
-            <p>•	Feeding refusal/intolerance/poor diet (infant, child)</p>
-            <p>•	Sleeping issues (infant, child, adult)</p>
+            <ul>
+                <li>Acid reflux (infant, child, adult)</li>
+                <li>Difficulty swallowing (child, adult)</li>
+                <li>Food impaction in the esophagus (older children/teens, adults)</li>
+                <li>Nausea/Vomiting (all ages)</li>
+                <li>Failure to thrive- due to poor appetite/pain swallowing (infant, child, rarely adult)</li>
+                <li>Abdominal pain/chest pain (child, adult)</li>
+                <li>Feeding refusal/intolerance/poor diet (infant, child)</li>
+                <li>Sleeping issues (infant, child, adult)</li>
+          </ul>
       </article>
 
     <article class="all-browsers_a">
@@ -59,9 +61,11 @@
         
         <p>For a patient to be correctly diagnosed with EOE, a patient must be put on an acid suppressor for at least six weeks to rule out GERD. 
         After six weeks, a doctor will perform an endoscopy. An endoscopy involves:</p>
-         <p>•	Placing a patient under general anesthesia.</p> 
-         <p>•	Inserting a small tube (endoscope) through the mouth.</p>
-         <p>•	Insert the tube down into the stomach and the first part of the small intestine.</p>
+          <ul>
+              <li>Placing a patient under general anesthesia.</li> 
+              <li>Inserting a small tube (endoscope) through the mouth.</li>
+              <li>Insert the tube down into the stomach and the first part of the small intestine.</li>
+        </ul>
        <p>During the endoscopy, the doctor will take several biopsies from several different locations throughout the esophagus and upper
        gastrointestinal (GI) area. After the endoscopy is completed, the doctor will send the biopsies of tissue samples taken during the
        procedure to a pathologist. The requirement of taking biopsies is crucial. During the initial inspection of the esophagus and upper
