--- a/wwd130/eoe/index.html
+++ b/wwd130/eoe/index.html
@@ -27,7 +27,7 @@
           <a class="button button_c" href="helpful_info.html">Helpful Info</a>
         </footer>
       </section>
-      <article class="all-browswers">
+      <article class="all-browsers">
       <h2>What Exactly is Eosinophilic Esophagitis?</h2>
       <p>Esophagitis or EoE for short can affect infants, children, teens, and adults. Symptoms can vary by age, individual, and severity.</p>  
       <p>EoE is a rare disorder of the esophagus. In medical terms, the disease is classified as an “immune-mediated” disease. Therefore, it is more complicated to explain. 
